                        CHANGES IN VERSION 0.4 (TBD)

NOTE: WE SHOULD GO BACK THROUGH GITHUB ISSUES TO MAKE NOTE HERE OF VARIOUS CHANGES

USER LEVEL CHANGES

-- [Perry - please add note about nimStep, nimRound, etc.]

-- [daniel - please add note about check()]

-- added additional parameterizations for dlnorm and dt

-- improved handling of distribution functions in nimbleFunction run code (i.e., the DSL), allowing argument matching by name and use of default values

-- added support for use of user-defined functions in BUGS code

-- added support for use of user-defined distributions in BUGS code, with the distribution density, simulate, distribution and quantile functions coded as nimbleFunctions and registered via registerDistributions()

-- added support for truncation (T(,) and I(,) syntax in BUGS) plus dinterval distribution for censoring, both following the JAGS functionality

-- added ability to impose constraints via the dconstraint syntax; these constraints act like data and therefore only take effect a posteriori and are not imposed when simulating from the model

-- model$checkConjugacy(nodes) now accepts a character vector argument of node/variable names, and returns a named list identifying conjugate relationships

-- added support for truncated distributions in MCMC conjugacy checking

-- incorporated automated blocking into MCMC engine: configureMCMC(model, autoBLock=TRUE) returns an MCMCspec defined by automated blocking procedure, and buildMCMC(model, autoBlock=TRUE) returns the corresponding MCMC algorithm

-- new syntax for MCMCspec$addSampler(type, target, control).  mandatory 'type' argument specifies sampler type, which may be a character string or nimbleFunction object.  mandatory 'target' argument specifices a character vector of target model nodes.  optional 'control' list argument overrides default sampler control parameters
